--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ hr{
     display: flex;
     justify-content: space-between;
     padding: 0em 1em;
+    margin: 7em 3em;
+    margin-top: 1em;
+    margin-left: 4em;
 }
 
 .box{
@@ -74,9 +77,7 @@ hr{
 .inam{
     width: 4em;
     height: 4em;
-    background-color: rgb(255, 0, 0);
     display: block;
-    border-radius: 40px;
     z-index: -20;
     position: relative;
     top: -6.4em;
